# phtm

./: README.md
.github/workflows/: node.js.yml  rust.yml
core/: Cargo.toml  README.md
core/src/: lib.rs  main.rs  zmq_lib.rs  zmq_main.rs
core/src/app/: actions.rs  mod.rs  ui.rs
core/src/core/: parameters.push  spatial_pooler.push  temporal_memory.push
core/src/node/: control.rs  debugging.rs  execution.rs  message.rs  mod.rs  source.rs
core/tests/: spatial_pooler_test.rs  temporal_memory_test.rs  test_utils.rs
data/: rec-center-hourly.csv
msg/: .gitignore  README.md  msg_ids.yaml
msg/cpp/: gen_cpp.py
msg/js/: gen_js.py  msg.js
msg/rs/: gen_rs.py  msg.rs
msg/ts/: gen_ts.py  msg.ts
proxy/: Cargo.toml  README.md
proxy/src/: main.rs
ui/: README.md  app.js  index.html  index_old.html  message.js  package-lock.json  package.json
ui/public/: code.js  code_old.js
ui/src/: encoder.js
ui/test/: encoder.spec.js
