[package]
name = "phtm"
description = "Push Hierarchical Temporal Memory"
version = "0.1.0"
authors = ["johker <johannes.kern@zoho.com>"]
edition = "2018"

[[bin]]
name = "phtm_node"
path = "src/main.rs"

[lib]
name = "phtm"
path = "src/lib.rs"


[dependencies]
# Core 
rand = "0.8"
pushr = { path = "../../pushr", version = "0.4.0" }
# pushr = "0.4.0"

# Message Interface
zmq = "0.9.2"
time = "0.2.25"
enum-primitive-derive = "0.2.1"
num-traits = "0.2.14"
syn = "1.0.69"
quote = "1.0.9"

# Terminal Interface 
tui = "0.17"
crossterm = "0.23"
tokio = {version = "1", features = ["full"]}
eyre = "0.6"
log = "0.4"
tui-logger = "0.7"
